--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ebayj">
+<html>
 <head>
-    <title>281 Component 3</title>
+    <meta charset="UTF-8" />
+    <title>Hello World</title>
+    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
-    <body>
-    <H2> Welcome [@.@] </H2>
-    </body>
+<body>
+<div id="root"></div>
+<script type="text/babel">
+
+  ReactDOM.render(
+          <h1>Hello, world! This is CMPE 281 Project index </h1>,
+    document.getElementById('root')
+  );
+
+</script>
+</body>
 </html>
