--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WeTest</title>
+    <title >We Test</title>
     <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
-
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/react.js"></script>
     <script src="/js/react-dom.min.js"></script>
