--- a/views/index.ejs
+++ b/views/index.ejs
@@ -338,7 +338,7 @@
 
                                 myData.forEach(function (item) {
                                     if(
-                                        (item.title.toLowerCase().indexOf(queryText)!= -1) ||
+                                      (item.title.toLowerCase().indexOf(queryText)!= -1) ||
                                         (item.ManagerName.toLowerCase().indexOf(queryText)!= -1) ||
                                         (item.dead_date.toLowerCase().indexOf(queryText)!= -1) ||
                                         (item.description.toLowerCase().indexOf(queryText)!= -1)
@@ -384,7 +384,10 @@
                             handleDelete: function () {
                                 this.props.onDelete(this.props.whichItem)
                             },
-
+                          handleDetails: function () {
+                            console.log(' Ia m here');
+                            console.log(this.props.whichItem);
+                          },
                             render: function() {
                                 return(
                                         <li className="pet-item media">
@@ -399,7 +402,11 @@
                                             </div>
                                             <div className="pet-info media-body">
                                                 <div className="pet-head">
-                                                    <span className="pet-name">{this.props.singleItem.title}</span>
+
+                                                    <button className="pet-delete btn " onClick={this.handleDetails}>
+                                                        <span className="glyphicon glyphicon-add"></span>
+                                                    </button>
+                                                    <span className="pet-name"  >{this.props.singleItem.title}</span>
                                                     <span className="apt-date pull-right">{this.props.singleItem.dead_date}</span>
                                                 </div>
                                                 <div className="owner-name">
