--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -161,12 +161,6 @@
                         <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li>
                         <li class="divider"></li>
                         <li>
                             <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
@@ -183,39 +177,36 @@
                     </li>
                     <li>
                         <a>
-                            <i class="fa fa-fw fa-bar-chart-o" onclick="UserAction()">Search </i>
+                            <i class="fa fa-fw fa-bar-chart-o" onclick="UserAction()"></i>  Projects
                             <!--<button class="fa fa-fw fa-bar-chart-o" type="submit" onclick="UserAction()">Search</button>-->
                         </a>
                     </li>
                     <li>
-                        <a href=""><i class="fa fa-fw fa-table"></i> Projects</a>
+                        <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Project</a>
                     </li>
-                    <li>
-                        <a href="forms"><i class="fa fa-fw fa-edit"></i> Forms</a>
-                    </li>
-                    <li>
-                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
-                    </li>
-                    <li>
-                        <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
-                    </li>
-                    <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo" class="collapse">
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
-                    <li>
-                        <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>-->
+                        <!--<ul id="demo" class="collapse">-->
+                            <!--<li>-->
+                                <!--<a href="#">Dropdown Item</a>-->
+                            <!--</li>-->
+                            <!--<li>-->
+                                <!--<a href="#">Dropdown Item</a>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>-->
+                    <!--</li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -229,7 +220,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Dashboard <small>Statistics Overview</small>
+                            Dashboard <small>Project Overview</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
@@ -258,7 +249,6 @@
                                 </table>
                             </div>
 
-                            <i class="fa fa-info-circle"></i>  <strong> SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
                         </div>
                     </div>
                 </div>
