--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -172,7 +172,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        <a href="dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                         <!--<button type="submit" onclick="UserAction()">Search</button>-->
                     </li>
                     <li>
