--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,24 +13,16 @@
 
     <script src="js/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js"></script>
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
 
-    <!-- Morris Charts CSS -->
     <link href="css/plugins/morris.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -176,78 +168,35 @@
                         <!--<button type="submit" onclick="UserAction()">Search</button>-->
                     </li>
                     <li>
-                        <a>
-                            <i class="fa fa-fw fa-bar-chart-o" onclick="UserAction()"></i>  Projects
-                            <!--<button class="fa fa-fw fa-bar-chart-o" type="submit" onclick="UserAction()">Search</button>-->
+                        <a href="projectlist">
+                            <i class="fa fa-fw fa-bar-chart-o"></i>  Projects
+                            <!--<i class="fa fa-fw fa-bar-chart-o" onclick="UserAction()"></i>  Projects-->
                         </a>
                     </li>
                     <li>
                         <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Project</a>
                     </li>
-                    <!--<li>-->
-                        <!--<a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>-->
-                        <!--<ul id="demo" class="collapse">-->
-                            <!--<li>-->
-                                <!--<a href="#">Dropdown Item</a>-->
-                            <!--</li>-->
-                            <!--<li>-->
-                                <!--<a href="#">Dropdown Item</a>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>-->
-                    <!--</li>-->
+
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </nav>
 
         <div id="page-wrapper">
 
             <div class="container-fluid">
 
-                <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Dashboard <small>Project Overview</small>
+                            Manager Dashboard <small> Project Overview</small>
                         </h1>
-                        <ol class="breadcrumb">
-                            <li class="active">
-                                <i class="fa fa-dashboard"></i> Dashboard
-                            </li>
-                        </ol>
+
                     </div>
                 </div>
-                <!-- /.row -->
 
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="alert alert-info alert-dismissable">
-
-
-                            <H2>HEREE</H2>
-                            <div class="container">
-                                <table id="table" data-height="460">
-                                    <thead>
-                                    <tr>
-                                        <th data-field="ManagerName">Item ID</th>
-                                        <th data-field="creation_date">Item Name</th>
-                                        <th data-field="price">Item Price</th>
-                                    </tr>
-                                    </thead>
-                                </table>
-                            </div>
 
                         </div>
                     </div>
@@ -504,14 +453,8 @@
         <!-- /#page-wrapper -->
 
     </div>
-    <!-- /#wrapper -->
-
-    <!-- jQuery -->
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
     <script src="js/plugins/morris/morris-data.js"></script>
