--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -163,7 +163,12 @@
                 <li>
                     <a href="dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                 </li>
-
+                <li>
+                    <a href="projectlist">
+                        <i class="fa fa-fw fa-bar-chart-o"></i>  Projects
+                        <!--<i class="fa fa-fw fa-bar-chart-o" onclick="UserAction()"></i>  Projects-->
+                    </a>
+                </li>
 
                 <li class="active">
                     <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Projects</a>
