--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,11 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="/css/signin.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+    <link href="loginT/css/style.css" rel="stylesheet">
+
     <![endif]-->
  <!--   <script type="text/babel">
         var toindex = function(){
@@ -24,7 +28,7 @@
     </script>-->
 </head>
 <body>
-    <div class="container">
+    <div class="form">
         <form class="form-signin">
         <div id="space"></div>
         <script type="text/babel">
@@ -42,9 +46,9 @@
                     var self = this;
                     return (
                             <div>
-                                <div id="buttons">
-                                    <p id="signupButton" onClick={self.switch.bind(null,"signup")} className={self.state.signup ? "yellow":"blue"}>Sign Up</p>
-                                    <p id="loginButton" onClick={self.switch.bind(null,"login")} className={self.state.login ? "yellow":"blue"}> Login</p>
+                                <div id="tab-group">
+                                    <p onClick={self.switch.bind(null,"signup")} className={self.state.signup ? "tab active":"tab"}>Sign Up</p>
+                                    <p onClick={self.switch.bind(null,"login")} className={self.state.login ? "tab active":"tab"}> Login</p>
                                 </div>
                                 { self.state.signup?<Signup/> : null}
                                 {self.state.login? <Login /> : null}
